price, shcedule section added

--- a/pages/_includes/_page_footer.njk
+++ b/pages/_includes/_page_footer.njk
@@ -43,6 +43,11 @@
                                     Services
                                 </a>
                             </li>
+                            <li>
+                                <a href="/refund-policy" class="text-base text-gray-300 hover:text-white">
+                                    Refund Policy
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
