--- a/docs/molecules/molecules-sync.css
+++ b/docs/molecules/molecules-sync.css
@@ -594,6 +594,12 @@ h6 {
 .text-contrast {
         color: var(--color__contrast);
     }
+.text-light {
+        color: var(--color__text-light);
+    }
+.text-text {
+        color: var(--color__text);
+    }
 /* font classes */
 .font-fair {
         font-family: "PlayfairDisplay", Arial, sans-serif;
@@ -696,6 +702,9 @@ h6 {
 .z-50 {
     z-index: 50;
 }
+.m-2 {
+    margin: 0.5rem;
+}
 .m-auto {
     margin: auto;
 }
@@ -703,12 +712,23 @@ h6 {
     margin-left: auto;
     margin-right: auto;
 }
+.my-10 {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+}
+.my-8 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
 .-my-2 {
     margin-top: -0.5rem;
     margin-bottom: -0.5rem;
 }
 .mb-2 {
     margin-bottom: 0.5rem;
+}
+.mt-8 {
+    margin-top: 2rem;
 }
 .mt-2 {
     margin-top: 0.5rem;
@@ -718,9 +738,6 @@ h6 {
 }
 .mt-12 {
     margin-top: 3rem;
-}
-.mt-8 {
-    margin-top: 2rem;
 }
 .mt-3 {
     margin-top: 0.75rem;
@@ -739,6 +756,9 @@ h6 {
 }
 .mt-6 {
     margin-top: 1.5rem;
+}
+.block {
+    display: block;
 }
 .inline-block {
     display: inline-block;
@@ -779,6 +799,9 @@ h6 {
 .w-full {
     width: 100%;
 }
+.w-80 {
+    width: 20rem;
+}
 .w-6 {
     width: 1.5rem;
 }
@@ -806,6 +829,12 @@ h6 {
 .max-w-sm {
     max-width: 24rem;
 }
+.max-w-4xl {
+    max-width: 56rem;
+}
+.max-w-6xl {
+    max-width: 72rem;
+}
 .max-w-7xl {
     max-width: 80rem;
 }
@@ -822,6 +851,9 @@ h6 {
 .transform {
     transform: var(--tw-transform);
 }
+.cursor-pointer {
+    cursor: pointer;
+}
 .appearance-none {
     appearance: none;
 }
@@ -830,6 +862,9 @@ h6 {
 }
 .grid-flow-col {
     grid-auto-flow: column;
+}
+.grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -860,6 +895,9 @@ h6 {
 }
 .justify-between {
     justify-content: space-between;
+}
+.justify-items-center {
+    justify-items: center;
 }
 .gap-2 {
     gap: 0.5rem;
@@ -901,10 +939,19 @@ h6 {
     margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
+.divide-y > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 0;
+    border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+    border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
 .divide-y-2 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
+}
+.divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-opacity: 1;
+    border-color: rgba(229, 231, 235, var(--tw-divide-opacity));
 }
 .divide-gray-50 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-opacity: 1;
@@ -922,14 +969,17 @@ h6 {
 .whitespace-nowrap {
     white-space: nowrap;
 }
-.rounded {
-    border-radius: 0.25rem;
+.rounded-xl {
+    border-radius: 0.75rem;
+}
+.rounded-lg {
+    border-radius: 0.5rem;
 }
 .rounded-md {
     border-radius: 0.375rem;
 }
-.rounded-lg {
-    border-radius: 0.5rem;
+.rounded {
+    border-radius: 0.25rem;
 }
 .rounded-full {
     border-radius: 9999px;
@@ -952,6 +1002,14 @@ h6 {
 .border-r-2 {
     border-right-width: 2px;
 }
+.border-gray-200 {
+    --tw-border-opacity: 1;
+    border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+.border-gray-800 {
+    --tw-border-opacity: 1;
+    border-color: rgba(31, 41, 55, var(--tw-border-opacity));
+}
 .border-transparent {
     border-color: transparent;
 }
@@ -959,13 +1017,13 @@ h6 {
     --tw-border-opacity: 1;
     border-color: rgba(55, 65, 81, var(--tw-border-opacity));
 }
-.bg-blue-100 {
-    --tw-bg-opacity: 1;
-    background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
-}
 .bg-gray-800 {
     --tw-bg-opacity: 1;
     background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
+.bg-blue-100 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
 .bg-white {
     --tw-bg-opacity: 1;
@@ -991,12 +1049,19 @@ h6 {
 .bg-center {
     background-position: center;
 }
+.p-6 {
+    padding: 1.5rem;
+}
 .p-2 {
     padding: 0.5rem;
 }
 .px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
+}
+.py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
 }
 .py-2 {
     padding-top: 0.5rem;
@@ -1025,6 +1090,9 @@ h6 {
 .py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+}
+.pb-5 {
+    padding-bottom: 1.25rem;
 }
 .pt-8 {
     padding-top: 2rem;
@@ -1070,21 +1138,25 @@ h6 {
     font-size: 0.875rem;
     line-height: 1.25rem;
 }
-.text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
-}
 .text-base {
     font-size: 1rem;
     line-height: 1.5rem;
 }
-.text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
+.text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
 }
 .text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+}
+.text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+}
+.text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
 }
 .font-bold {
     font-weight: 700;
@@ -1095,8 +1167,14 @@ h6 {
 .font-medium {
     font-weight: 500;
 }
+.font-extrabold {
+    font-weight: 800;
+}
 .uppercase {
     text-transform: uppercase;
+}
+.leading-6 {
+    line-height: 1.5rem;
 }
 .leading-snug {
     line-height: 1.375;
@@ -1107,6 +1185,18 @@ h6 {
 .text-white {
     --tw-text-opacity: 1;
     color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.text-gray-600 {
+    --tw-text-opacity: 1;
+    color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+.text-gray-900 {
+    --tw-text-opacity: 1;
+    color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+.text-gray-500 {
+    --tw-text-opacity: 1;
+    color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 .text-green-300 {
     --tw-text-opacity: 1;
@@ -1128,14 +1218,6 @@ h6 {
     --tw-text-opacity: 1;
     color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
-.text-gray-900 {
-    --tw-text-opacity: 1;
-    color: rgba(17, 24, 39, var(--tw-text-opacity));
-}
-.text-gray-500 {
-    --tw-text-opacity: 1;
-    color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
 .text-gray-800 {
     --tw-text-opacity: 1;
     color: rgba(31, 41, 55, var(--tw-text-opacity));
@@ -1150,6 +1232,10 @@ h6 {
 .placeholder-gray-500::placeholder {
     --tw-placeholder-opacity: 1;
     color: rgba(107, 114, 128, var(--tw-placeholder-opacity));
+}
+.shadow-sm {
+    --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-md {
     --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -1184,13 +1270,17 @@ h6 {
 }
 /****  end imports  ********************************/
 /****  end imports  ********************************/
-.hover\:bg-indigo-600:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
-}
 .hover\:bg-gray-50:hover {
     --tw-bg-opacity: 1;
     background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.hover\:bg-gray-900:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.hover\:bg-indigo-600:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
 }
 .hover\:bg-gray-100:hover {
     --tw-bg-opacity: 1;
@@ -1226,6 +1316,10 @@ h6 {
 }
 .hover\:underline:hover {
     text-decoration: underline;
+}
+.hover\:shadow-lg:hover {
+    --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .focus\:border-white:focus {
     --tw-border-opacity: 1;
@@ -1336,6 +1430,9 @@ h6 {
     }
     .md\:grid-cols-2 {
         grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+    .md\:grid-cols-3 {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
     }
     .md\:items-center {
         align-items: center;
