--- a/docs/molecules/molecules-sync.css
+++ b/docs/molecules/molecules-sync.css
@@ -570,7 +570,6 @@ h6 {
         transition: all 0.2s;
     }
 .bg-primary{
-        color: var(--color__secondary);
         background-color: var(--color__primary);    
     }
 .bg-contrast {
@@ -613,11 +612,11 @@ h6 {
         right: 0;
         left: 0;
         z-index: 1030;
+        /* background: var(--color__primary)!important; */
     }
 @media (max-width: 767px) { 
         .fixed-top {
            position: initial;
-           background: var(--color__primary)!important;
         }
     }
 .container {
@@ -724,23 +723,26 @@ h6 {
     margin-top: -0.5rem;
     margin-bottom: -0.5rem;
 }
-.mb-2 {
-    margin-bottom: 0.5rem;
-}
-.mt-8 {
-    margin-top: 2rem;
-}
-.mt-2 {
-    margin-top: 0.5rem;
-}
 .mt-4 {
     margin-top: 1rem;
 }
 .mt-12 {
     margin-top: 3rem;
 }
+.mt-8 {
+    margin-top: 2rem;
+}
 .mt-3 {
     margin-top: 0.75rem;
+}
+.mt-2 {
+    margin-top: 0.5rem;
+}
+.mt-28 {
+    margin-top: 7rem;
+}
+.mb-2 {
+    margin-bottom: 0.5rem;
 }
 .mt-1 {
     margin-top: 0.25rem;
@@ -799,11 +801,11 @@ h6 {
 .w-full {
     width: 100%;
 }
-.w-80 {
-    width: 20rem;
-}
 .w-6 {
     width: 1.5rem;
+}
+.w-80 {
+    width: 20rem;
 }
 .w-8 {
     width: 2rem;
@@ -823,6 +825,9 @@ h6 {
 .min-w-0 {
     min-width: 0px;
 }
+.max-w-7xl {
+    max-width: 80rem;
+}
 .max-w-5xl {
     max-width: 64rem;
 }
@@ -834,9 +839,6 @@ h6 {
 }
 .max-w-6xl {
     max-width: 72rem;
-}
-.max-w-7xl {
-    max-width: 80rem;
 }
 .max-w-xl {
     max-width: 36rem;
@@ -863,14 +865,14 @@ h6 {
 .grid-flow-col {
     grid-auto-flow: column;
 }
-.grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
+.grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
 }
-.grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+.grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .flex-row {
     flex-direction: row;
@@ -899,11 +901,11 @@ h6 {
 .justify-items-center {
     justify-items: center;
 }
-.gap-2 {
-    gap: 0.5rem;
-}
 .gap-8 {
     gap: 2rem;
+}
+.gap-2 {
+    gap: 0.5rem;
 }
 .gap-y-1 {
     row-gap: 0.25rem;
@@ -969,17 +971,17 @@ h6 {
 .whitespace-nowrap {
     white-space: nowrap;
 }
-.rounded-xl {
-    border-radius: 0.75rem;
-}
-.rounded-lg {
-    border-radius: 0.5rem;
-}
 .rounded-md {
     border-radius: 0.375rem;
 }
 .rounded {
     border-radius: 0.25rem;
+}
+.rounded-xl {
+    border-radius: 0.75rem;
+}
+.rounded-lg {
+    border-radius: 0.5rem;
 }
 .rounded-full {
     border-radius: 9999px;
@@ -1002,6 +1004,13 @@ h6 {
 .border-r-2 {
     border-right-width: 2px;
 }
+.border-transparent {
+    border-color: transparent;
+}
+.border-gray-700 {
+    --tw-border-opacity: 1;
+    border-color: rgba(55, 65, 81, var(--tw-border-opacity));
+}
 .border-gray-200 {
     --tw-border-opacity: 1;
     border-color: rgba(229, 231, 235, var(--tw-border-opacity));
@@ -1010,20 +1019,9 @@ h6 {
     --tw-border-opacity: 1;
     border-color: rgba(31, 41, 55, var(--tw-border-opacity));
 }
-.border-transparent {
-    border-color: transparent;
-}
-.border-gray-700 {
-    --tw-border-opacity: 1;
-    border-color: rgba(55, 65, 81, var(--tw-border-opacity));
-}
 .bg-gray-800 {
     --tw-bg-opacity: 1;
     background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
-}
-.bg-blue-100 {
-    --tw-bg-opacity: 1;
-    background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
 .bg-white {
     --tw-bg-opacity: 1;
@@ -1032,6 +1030,10 @@ h6 {
 .bg-indigo-500 {
     --tw-bg-opacity: 1;
     background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
+}
+.bg-blue-100 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
 .bg-gray-400 {
     --tw-bg-opacity: 1;
@@ -1055,13 +1057,13 @@ h6 {
 .p-2 {
     padding: 0.5rem;
 }
+.py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
 .px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
-}
-.py-10 {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
 }
 .py-2 {
     padding-top: 0.5rem;
@@ -1071,9 +1073,9 @@ h6 {
     padding-left: 3rem;
     padding-right: 3rem;
 }
-.py-12 {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+.py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
 }
 .px-2 {
     padding-left: 0.5rem;
@@ -1091,11 +1093,11 @@ h6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
 }
-.pb-5 {
-    padding-bottom: 1.25rem;
-}
 .pt-8 {
     padding-top: 2rem;
+}
+.pb-5 {
+    padding-bottom: 1.25rem;
 }
 .pt-6 {
     padding-top: 1.5rem;
@@ -1130,10 +1132,6 @@ h6 {
 .font-serif {
     font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
-.text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-}
 .text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -1141,6 +1139,14 @@ h6 {
 .text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+}
+.text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+}
+.text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
 }
 .text-lg {
     font-size: 1.125rem;
@@ -1150,16 +1156,9 @@ h6 {
     font-size: 2.25rem;
     line-height: 2.5rem;
 }
-.text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
-}
 .text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
-}
-.font-bold {
-    font-weight: 700;
 }
 .font-semibold {
     font-weight: 600;
@@ -1167,36 +1166,39 @@ h6 {
 .font-medium {
     font-weight: 500;
 }
+.font-bold {
+    font-weight: 700;
+}
 .font-extrabold {
     font-weight: 800;
 }
 .uppercase {
     text-transform: uppercase;
 }
-.leading-6 {
-    line-height: 1.5rem;
-}
 .leading-snug {
     line-height: 1.375;
+}
+.leading-6 {
+    line-height: 1.5rem;
 }
 .tracking-wider {
     letter-spacing: 0.05em;
 }
-.text-white {
+.text-gray-400 {
     --tw-text-opacity: 1;
-    color: rgba(255, 255, 255, var(--tw-text-opacity));
+    color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
-.text-gray-600 {
+.text-gray-300 {
     --tw-text-opacity: 1;
-    color: rgba(75, 85, 99, var(--tw-text-opacity));
+    color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
 .text-gray-900 {
     --tw-text-opacity: 1;
     color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
-.text-gray-500 {
+.text-white {
     --tw-text-opacity: 1;
-    color: rgba(107, 114, 128, var(--tw-text-opacity));
+    color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 .text-green-300 {
     --tw-text-opacity: 1;
@@ -1210,13 +1212,13 @@ h6 {
     --tw-text-opacity: 1;
     color: rgba(109, 40, 217, var(--tw-text-opacity));
 }
-.text-gray-400 {
+.text-gray-600 {
     --tw-text-opacity: 1;
-    color: rgba(156, 163, 175, var(--tw-text-opacity));
+    color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
-.text-gray-300 {
+.text-gray-500 {
     --tw-text-opacity: 1;
-    color: rgba(209, 213, 219, var(--tw-text-opacity));
+    color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 .text-gray-800 {
     --tw-text-opacity: 1;
@@ -1270,6 +1272,10 @@ h6 {
 }
 /****  end imports  ********************************/
 /****  end imports  ********************************/
+.hover\:bg-indigo-600:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
+}
 .hover\:bg-gray-50:hover {
     --tw-bg-opacity: 1;
     background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
@@ -1277,10 +1283,6 @@ h6 {
 .hover\:bg-gray-900:hover {
     --tw-bg-opacity: 1;
     background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
-.hover\:bg-indigo-600:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
 }
 .hover\:bg-gray-100:hover {
     --tw-bg-opacity: 1;
@@ -1398,14 +1400,14 @@ h6 {
     .md\:float-right {
         float: right;
     }
+    .md\:mt-0 {
+        margin-top: 0px;
+    }
     .md\:mb-5 {
         margin-bottom: 1.25rem;
     }
     .md\:mb-8 {
         margin-bottom: 2rem;
-    }
-    .md\:mt-0 {
-        margin-top: 0px;
     }
     .md\:block {
         display: block;
