--- a/pages/_includes/components/navs/nav1.njk
+++ b/pages/_includes/components/navs/nav1.njk
@@ -1,6 +1,6 @@
 {%- from "components/global-image.njk" import global_image -%}
 
-{% macro nav_link(label, url, className="") %}
+{% macro nav_link(label, url, className = "") %}
     <a href="{{url}}" class="text-base text-white hover:text-blue-800 no-underline pt-1 font-poppins {{className}}">
         {{label}}
     </a>
@@ -16,7 +16,7 @@
                 viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd"
                     d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-                    clip-rule="evenodd" />
+                    clip-rule="evenodd"/>
             </svg>
         </button>
 
@@ -25,14 +25,14 @@
                 <div class="relative grid gap-2 bg-white p-2">
                     {% for menu in nav.menus %}
                         <a href="{{menu.link}}" class="py-1 flex items-start rounded-lg hover:bg-gray-50 no-underline">
-                            <img src = "images/{{menu.icon}}" alt="{{menu.lable}}" />
+                            <img src = "images/{{menu.icon}}" alt="{{menu.lable}}"/>
                             <div class="ml-4">
                                 <p class="text-base font-medium text-gray-900">
                                     {{menu.label}}
-                                </p>                                   
+                                </p>
                             </div>
                         </a>
-                    {% endfor %}                    
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -40,104 +40,108 @@
 {% endmacro %}
 {% macro company_logo() %}
     <a href="/" class="grid grid-flow-col auto-cols-max gap-2 items-center no-underline">
-        <img src = "images/logo.png" height="57" alt="Logo" class="h-20" />
-        <span class="font-semibold text-2xl font-serif text-white"><span class="text-4xl">Bay</span> <br/> Cruise</span>
+        <img src = "images/logo.png" height="57" alt="Logo" class="h-20"/>
+        <span class="font-semibold text-2xl font-serif text-white">
+            <span class="text-4xl">Bay</span>
+            <br/> Cruise</span>
     </a>
 {% endmacro %}
 
-<div class="max-w-7xl mx-auto px-4 sm:px-6 fixed-top pt-3 md:pt-5">
-    <div class="flex justify-between items-center py-2 md:justify-start md:space-x-10">
-        {# Company logo #}
-        <div class="flex justify-start lg:w-0 lg:flex-1">
-            {{company_logo()}}
-        </div>
+<div id="app_nav" class="fixed-top bg-primary">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 pt-3 md:pt-5">
+        <div class="flex justify-between items-center py-2 md:justify-start md:space-x-10">
+            {# Company logo #}
+            <div class="flex justify-start lg:w-0 lg:flex-1">
+                {{company_logo()}}
+            </div>
 
-        {# Burger button #}
-        <div class="-mr-2 -my-2 md:hidden">
-            <button type="button"
+            {# Burger button #}
+            <div class="-mr-2 -my-2 md:hidden">
+                <button type="button"
                 class="burger-menu bg-transparent rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500"
                 aria-expanded="false">
-                <span class="sr-only">Open menu</span>
-                <!-- Heroicon name: outline/menu -->
-                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    <span class="sr-only">Open menu</span>
+                    <!-- Heroicon name: outline/menu -->
+                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                     stroke="currentColor" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                </svg>
-            </button>
-        </div>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+                    </svg>
+                </button>
+            </div>
 
-        {# Nav links #}
-        <nav class="hidden md:flex space-x-4">
-            {% for nav in params %}
-                {% if nav.dropdown %}
-                    {{nav_dropdown(nav)}}                
-                {% else %}
-                    {{nav_link(nav.label, nav.link)}}                
-                {% endif %}
-            {% endfor %}
-        </nav>
+            {# Nav links #}
+            <nav class="hidden md:flex space-x-4">
+                {% for nav in params %}
+                    {% if nav.dropdown %}
+                        {{nav_dropdown(nav)}}
+                    {% else %}
+                        {{nav_link(nav.label, nav.link)}}
+                    {% endif %}
+                {% endfor %}
+            </nav>
 
-        {# Hot number #}
-        <div class="hidden md:flex items-center justify-end space-x-8 md:flex-1 lg:w-0">
-            <a href="tel:+8801826191509" class="transition duration-500 ease-in-out hover:bg-yellow-600 px-2 py-1 text-base text-white hover:text-gray-200 no-underline rounded-full flex items-center">
-                <img src="images/phone.svg" height="16" width="16" class="w-4 h-4"> &nbsp; 01826-191509
+            {# Hot number #}
+            <div class="hidden md:flex items-center justify-end space-x-8 md:flex-1 lg:w-0">
+                <a href="tel:+8801826191509" class="transition duration-500 ease-in-out hover:bg-yellow-600 px-2 py-1 text-base text-white hover:text-gray-200 no-underline rounded-full flex items-center">
+                    <img src="images/phone.svg" height="16" width="16" class="w-4 h-4"> &nbsp; 01826-191509
             </a>
+            </div>
         </div>
-    </div>
 
-    <div class="flyby-mobile absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden z-50">
-        <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-primary divide-y-2 divide-gray-50">
-            <div class="pt-5 pb-6 px-5">
-                <div class="flex items-center justify-between">
-                    {{company_logo()}}
-                    <div class="-mr-2">
-                        <button type="button"
+        <div class="flyby-mobile absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden z-50">
+            <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-primary divide-y-2 divide-gray-50">
+                <div class="pt-5 pb-6 px-5">
+                    <div class="flex items-center justify-between">
+                        {{company_logo()}}
+                        <div class="-mr-2">
+                            <button type="button"
                             class="burger-menu bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500">
-                            <span class="sr-only">Close menu</span>
-                            <!-- Heroicon name: outline/x -->
-                            <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                <span class="sr-only">Close menu</span>
+                                <!-- Heroicon name: outline/x -->
+                                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor" aria-hidden="true">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M6 18L18 6M6 6l12 12" />
-                            </svg>
-                        </button>
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M6 18L18 6M6 6l12 12"/>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="mt-6">
+                        <nav class="grid gap-y-1">
+                            {% for nav in params %}
+                                {% if not nav.dropdown %}
+                                    {{nav_link(nav.label, nav.link, className="hover:bg-gray-50 py-2 font-medium pl-5")}}
+                                {% endif %}
+                            {% endfor %}
+                        </nav>
                     </div>
                 </div>
-
-                <div class="mt-6">
-                    <nav class="grid gap-y-1">
-                         {% for nav in params %}
-                            {% if not nav.dropdown %}                                    
-                               {{nav_link(nav.label, nav.link, className="hover:bg-gray-50 py-2 font-medium pl-5")}}                
+                <div class="py-6 px-5 space-y-6">
+                    <div class="grid grid-cols-2 gap-y-4 gap-x-2">
+                        {% for nav in params %}
+                            {% if nav.dropdown %}
+                                {% for menu in nav.menus %}
+                                    <a href="{{menu.link}}" class="py-1 flex items-start rounded-lg hover:bg-gray-50 no-underline">
+                                        <img src = "images/{{menu.icon}}" alt="{{menu.lable}}"/>
+                                        <div class="ml-4">
+                                            <p class="text-base font-medium text-gray-900">
+                                                {{menu.label}}
+                                            </p>
+                                        </div>
+                                    </a>
+                                {% endfor %}
                             {% endif %}
-                        {% endfor %}                        
-                    </nav>
-                </div>
-            </div>
-            <div class="py-6 px-5 space-y-6">
-                <div class="grid grid-cols-2 gap-y-4 gap-x-2">
-                    {% for nav in params %}
-                        {% if nav.dropdown %} 
-                            {% for menu in nav.menus %}
-                                <a href="{{menu.link}}" class="py-1 flex items-start rounded-lg hover:bg-gray-50 no-underline">
-                                    <img src = "images/{{menu.icon}}" alt="{{menu.lable}}" />
-                                    <div class="ml-4">
-                                        <p class="text-base font-medium text-gray-900">
-                                            {{menu.label}}
-                                        </p>                                   
-                                    </div>
-                                </a>
-                            {% endfor %}  
-                        {% endif %}
-                    {% endfor %}                       
-                </div>
-                <div>
-                    <p class="mt-6 text-center text-base font-medium text-gray-500">
+                        {% endfor %}
+                    </div>
+                    <div>
+                        <p class="mt-6 text-center text-base font-medium text-gray-500">
                         Welcome to 
                         <a href="/" class="text-blue-600 hover:text-blue-500">
                             Bay Coruiser
                         </a>
-                    </p>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
