global image frame added

--- a/pages/_includes/components/global-image.njk
+++ b/pages/_includes/components/global-image.njk
@@ -5,40 +5,31 @@
     #   @author Nazmul Alam
  #}
 {% macro global_image(image, classes, carousel=false, lazy = true, imgClass="") %}
-    {% if not image.background %}
+    {% set srcset = 'data-srcset' if carousel else 'srcset' %}
         <picture class="{{ classes }}">
-            {% for size in image.sizes %}
-                {% set defaultSrc = {
-                    intrinsicwidth: (size.intrinsicwidth if size.intrinsicwidth else
-                    image.intrinsicwidth), src : (size.src if size.src else
-                    image.src
-                    )} %}
-                {% for type in image.types %}
-                    <source {% if carousel %} data-src="{{ defaultSrc.src }}" {% endif %}
+            {% if image.sizes | length > 0 %}
+                {% for size in image.sizes %}
+                    {% set defaultSrc = {
+                        intrinsicwidth: (size.intrinsicwidth if size.intrinsicwidth else
+                        image.intrinsicwidth), src : (size.src if size.src else
+                        image.src
+                        )} %}
+                    {% for type in image.types %}
+                        <source {% if carousel %} data-src="{{ defaultSrc.src }}" {% endif %}
                             srcset="{{ defaultSrc | imgObjSrcSet(type) }}" media="{{ size.media }}"
                             sizes="{{ size.view }}" type="image/{{ type | trim }}">
+                    {% endfor %}
                 {% endfor %}
-            {% endfor %}
-            <img
-                {% if not carousel %}
-                    src="{{ image.src }}.{{image.types | last}}"
-                    srcset="{{ image | imgObjSrcSet(image.types | last ) }}"
-                    loading="{{ 'lazy' if lazy else 'auto' }}"
-                {% else %}
-                    data-src="{{ image.src }}"
-                    data-srcset="{{ image | imgObjSrcSet(image.types | last ) }}"
-                {% endif %}
-                    sizes= {{ (image.sizes | first).view }}
-                    class="{{ 'swiper-lazy' if carousel }} w-full {{ imgClass }}"
-            decoding="async"
-            alt="{{ image.alt }}">
-
-            {% if image.credit %}
-                <p class="text-right text-xs mt-3">Credit: {{ image.credit }}</p>
             {% endif %}
-        </picture>
-    {% else %}
-        <div class="{{ classes }} bg-cover bg-center large:bg-inherit w-full"
-             style="background-image:url({{ image.src }})">{{ image.alt | safe }}</div>
-    {% endif %}
+            <img
+                src="{{ image.src }}.{{image.types | last}}"
+                {{ srcset }} = "{{ image | imgObjSrcSet(image.types | last ) }}"
+                sizes = {{ (image.sizes | first).view }}
+                {% if not carousel %}
+                    loading="{{ 'lazy' if lazy else 'auto' }}"
+                {% endif %}
+                class="{{ 'swiper-lazy' if carousel }} w-full {{ imgClass }}"
+                decoding="async"
+                alt="{{ image.alt }}" />
+        </picture>    
 {% endmacro %}
