--- a/pages/molecules/molecules.njk
+++ b/pages/molecules/molecules.njk
@@ -20,7 +20,7 @@ nickname: "molecules"
 <hr/>
 <h2>Nav</h2>
 <div class="bg-blue-100 py-2">
-{{component('navs/nav1', data.navbar)}}
+{# {{component('navs/nav1', data.navbar)}} #}
 </div>
 
 
