--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import url("./global-image.css");
 /****  end imports  ********************************/
 
 @layer base {
