--- a/docs/about/about-sync.css
+++ b/docs/about/about-sync.css
@@ -789,14 +789,11 @@ h6 {
 .h-4 {
     height: 1rem;
 }
-.h-auto {
-    height: auto;
-}
 .h-5 {
     height: 1.25rem;
 }
-.h-20 {
-    height: 5rem;
+.h-16 {
+    height: 4rem;
 }
 .w-full {
     width: 100%;
@@ -821,6 +818,9 @@ h6 {
 }
 .w-48 {
     width: 12rem;
+}
+.w-16 {
+    width: 4rem;
 }
 .min-w-0 {
     min-width: 0px;
@@ -1045,12 +1045,6 @@ h6 {
 .bg-opacity-60 {
     --tw-bg-opacity: 0.6;
 }
-.bg-cover {
-    background-size: cover;
-}
-.bg-center {
-    background-position: center;
-}
 .p-6 {
     padding: 1.5rem;
 }
@@ -1125,9 +1119,6 @@ h6 {
 }
 .text-center {
     text-align: center;
-}
-.text-right {
-    text-align: right;
 }
 .font-serif {
     font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
@@ -1269,6 +1260,232 @@ h6 {
 }
 .ease-in-out {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+:root {
+    /* base 1:1 aspect ratio */
+    --n: 1;
+    --d: 1;
+}
+.image_frame {
+    /* aspect-ratio: var(--d) / var(--n); */
+    padding-top: calc((var(--n) / var(--d)) * 100%);
+    position: relative;
+    display: block;
+}
+.image_frame > * {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.image_frame > img,
+.image_frame > video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+@media screen and (min-width: 320px) {
+    /* sm breakpoint aspect ratios */
+    .sm\:1\:1 {
+        /* 1:1 */
+        --d: 1;
+        --n: 1;
+    }
+
+    .sm\:2\:1 {
+        /* 2:1 */
+        --d: 2;
+        --n: 1;
+    }
+    .sm\:1\:2 {
+        /* 1:2 */
+        --d: 1;
+        --n: 2;
+    }
+
+    .sm\:2\:3 {
+        /* 2:3 */
+        --d: 2;
+        --n: 3;
+    }
+
+    .sm\:3\:2 {
+        /* 3:2 */
+        --d: 3;
+        --n: 2;
+    }
+
+    .sm\:3\:4 {
+        /* 3:4 */
+        --d: 3;
+        --n: 4;
+    }
+
+    .sm\:4\:3 {
+        /* 4:3 */
+        --d: 4;
+        --n: 3;
+    }
+
+    .sm\:9\:16 {
+        /* 9:16 */
+        --d: 9;
+        --n: 16;
+    }
+    .sm\:16\:9 {
+        /* 16:9 */
+        --d: 16;
+        --n: 9;
+    }
+}
+@media (min-width: 768px) {
+    /* md: '768px'  */
+    .md\:1\:1 {
+        /* 1:1 */
+        --d: 1;
+        --n: 1;
+    }
+    .md\:1\:2 {
+        /* 1:2 */
+        --d: 1;
+        --n: 2;
+    }
+    .md\:2\:1 {
+        /* 2:1 */
+        --d: 2;
+        --n: 1;
+    }
+    .md\:2\:3 {
+        /* 2:3 */
+        --d: 2;
+        --n: 3;
+    }
+    .md\:3\:2 {
+        /* 3:2 */
+        --d: 3;
+        --n: 2;
+    }
+    .md\:3\:4 {
+        /* 3:4 */
+        --d: 3;
+        --n: 4;
+    }
+    .md\:4\:3 {
+        /* 4:3 */
+        --d: 4;
+        --n: 3;
+    }
+    .md\:9\:16 {
+        /* 9:16 */
+        --d: 9;
+        --n: 16;
+    }
+    .md\:16\:9 {
+        /* 16:9 */
+        --d: 16;
+        --n: 9;
+    }
+}
+@media screen and (min-width: 976px) {
+    /* lg: '976px', */
+    .lg\:1\:1 {
+        /* 1:1 */
+        --d: 1;
+        --n: 1;
+    }
+    .lg\:1\:2 {
+        /* 1:2 */
+        --d: 1;
+        --n: 2;
+    }
+    .lg\:2\:1 {
+        /* 2:1 */
+        --d: 2;
+        --n: 1;
+    }
+    .lg\:2\:3 {
+        /* 2:3 */
+        --d: 2;
+        --n: 3;
+    }
+    .lg\:3\:2 {
+        /* 3:2 */
+        --d: 3;
+        --n: 2;
+    }
+    .lg\:3\:4 {
+        /* 3:4 */
+        --d: 3;
+        --n: 4;
+    }
+    .lg\:4\:3 {
+        /* 4:3 */
+        --d: 4;
+        --n: 3;
+    }
+    .lg\:9\:16 {
+        /* 9:16 */
+        --d: 9;
+        --n: 16;
+    }
+    .lg\:16\:9 {
+        /* 16:9 */
+        --d: 16;
+        --n: 9;
+    }
+}
+@media screen and (min-width: 1440px){
+    /* xl: '1440px', */
+    .xl\:1\:1 {
+        /* 1:1 */
+        --d: 1;
+        --n: 1;
+    }
+    .xl\:1\:2 {
+        /* 1:2 */
+        --d: 1;
+        --n: 2;
+    }    
+    .xl\:2\:1 {
+        /* 2:1 */
+        --d: 2;
+        --n: 1;
+    }
+    .xl\:2\:3 {
+        /* 2:3 */
+        --d: 2;
+        --n: 3;
+    }
+    .xl\:3\:2 {
+        /* 3:2 */
+        --d: 3;
+        --n: 2;
+    }
+    .xl\:3\:4 {
+        /* 3:4 */
+        --d: 3;
+        --n: 4;
+    }
+    .xl\:4\:3 {
+        /* 4:3 */
+        --d: 4;
+        --n: 3;
+    }
+    .xl\:9\:16 {
+        /* 9:16 */
+        --d: 9;
+        --n: 16;
+    }    
+    .xl\:16\:9 {
+        /* 16:9 */
+        --d: 16;
+        --n: 9;
+    }
 }
 /****  end imports  ********************************/
 /****  end imports  ********************************/
