--- a/pages/_includes/components/navs/nav1.njk
+++ b/pages/_includes/components/navs/nav1.njk
@@ -1,4 +1,4 @@
-{%- from "components/global-image.njk" import global_image -%}
+{% from "components/global-image.njk" import global_image %}
 
 {% macro nav_link(label, url, className = "") %}
     <a href="{{url}}" class="text-base text-white hover:text-blue-800 no-underline pt-1 font-poppins {{className}}">
@@ -38,9 +38,9 @@
         </div>
     </div>
 {% endmacro %}
-{% macro company_logo() %}
+{% macro company_logo(logo) %}
     <a href="/" class="grid grid-flow-col auto-cols-max gap-2 items-center no-underline">
-        <img src = "images/logo.png" height="57" alt="Logo" class="h-20"/>
+        {{global_image(logo.image, classes='h-16 w-16 image_frame')}}
         <span class="font-semibold text-2xl font-serif text-white">
             <span class="text-4xl">Bay</span>
             <br/> Cruise</span>
@@ -51,8 +51,8 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 pt-3 md:pt-5">
         <div class="flex justify-between items-center py-2 md:justify-start md:space-x-10">
             {# Company logo #}
-            <div class="flex justify-start lg:w-0 lg:flex-1">
-                {{company_logo()}}
+            <div class="flex justify-start lg:w-0 lg:flex-1 ">
+                {{company_logo(params.logo)}}
             </div>
 
             {# Burger button #}
@@ -71,7 +71,7 @@
 
             {# Nav links #}
             <nav class="hidden md:flex space-x-4">
-                {% for nav in params %}
+                {% for nav in params.links %}
                     {% if nav.dropdown %}
                         {{nav_dropdown(nav)}}
                     {% else %}
@@ -92,7 +92,7 @@
             <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-primary divide-y-2 divide-gray-50">
                 <div class="pt-5 pb-6 px-5">
                     <div class="flex items-center justify-between">
-                        {{company_logo()}}
+                        {{company_logo(params.logo)}}
                         <div class="-mr-2">
                             <button type="button"
                             class="burger-menu bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500">
@@ -109,7 +109,7 @@
 
                     <div class="mt-6">
                         <nav class="grid gap-y-1">
-                            {% for nav in params %}
+                            {% for nav in params.links %}
                                 {% if not nav.dropdown %}
                                     {{nav_link(nav.label, nav.link, className="hover:bg-gray-50 py-2 font-medium pl-5")}}
                                 {% endif %}
@@ -119,7 +119,7 @@
                 </div>
                 <div class="py-6 px-5 space-y-6">
                     <div class="grid grid-cols-2 gap-y-4 gap-x-2">
-                        {% for nav in params %}
+                        {% for nav in params.links %}
                             {% if nav.dropdown %}
                                 {% for menu in nav.menus %}
                                     <a href="{{menu.link}}" class="py-1 flex items-start rounded-lg hover:bg-gray-50 no-underline">
