--- a/pages/gallery/gallery-sync.css
+++ b/pages/gallery/gallery-sync.css
@@ -1,3 +1,4 @@
 /****  start imports  ********************************/
 @import "../../styles/global.css";
 /****  end imports  ********************************/
+@import "../../components/LightBox/light-box-styles.css";
