--- a/docs/gallery/gallery-sync.css
+++ b/docs/gallery/gallery-sync.css
@@ -1909,6 +1909,9 @@ body.hidden-scroll {
     .md\:float-right {
         float: right;
     }
+    .md\:mt-28 {
+        margin-top: 7rem;
+    }
     .md\:mb-5 {
         margin-bottom: 1.25rem;
     }
