--- a/pages/molecules/molecules.njk
+++ b/pages/molecules/molecules.njk
@@ -24,4 +24,4 @@ nickname: "molecules"
 </div>
 
 
-<div class="button bg-contrast">abcd</div>
+<div class="button bg-contrast pb-2 font-semibold">abcd</div>
