--- a/docs/gallery/gallery-sync.css
+++ b/docs/gallery/gallery-sync.css
@@ -716,6 +716,9 @@ h6 {
 .m-2 {
     margin: 0.5rem;
 }
+.m-4 {
+    margin: 1rem;
+}
 .m-auto {
     margin: auto;
 }
@@ -735,23 +738,12 @@ h6 {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
-.my-10 {
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
-}
-.my-8 {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-}
 .-my-2 {
     margin-top: -0.5rem;
     margin-bottom: -0.5rem;
 }
 .mb-2 {
     margin-bottom: 0.5rem;
-}
-.mt-8 {
-    margin-top: 2rem;
 }
 .mt-6 {
     margin-top: 1.5rem;
@@ -767,6 +759,9 @@ h6 {
 }
 .ml-3 {
     margin-left: 0.75rem;
+}
+.mt-8 {
+    margin-top: 2rem;
 }
 .mt-10 {
     margin-top: 2.5rem;
@@ -834,6 +829,9 @@ h6 {
 .w-full {
     width: 100%;
 }
+.w-16 {
+    width: 4rem;
+}
 .w-6 {
     width: 1.5rem;
 }
@@ -851,9 +849,6 @@ h6 {
 }
 .w-48 {
     width: 12rem;
-}
-.w-16 {
-    width: 4rem;
 }
 .min-w-0 {
     min-width: 0px;
@@ -1000,19 +995,10 @@ h6 {
     margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
-.divide-y > :not([hidden]) ~ :not([hidden]) {
-    --tw-divide-y-reverse: 0;
-    border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-    border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-}
 .divide-y-2 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
-}
-.divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
-    --tw-divide-opacity: 1;
-    border-color: rgba(229, 231, 235, var(--tw-divide-opacity));
 }
 .divide-gray-50 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-opacity: 1;
@@ -1027,6 +1013,11 @@ h6 {
 .overflow-hidden {
     overflow: hidden;
 }
+.truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .whitespace-nowrap {
     white-space: nowrap;
 }
@@ -1036,14 +1027,22 @@ h6 {
 .rounded-xl {
     border-radius: 0.75rem;
 }
-.rounded-lg {
-    border-radius: 0.5rem;
-}
 .rounded-md {
     border-radius: 0.375rem;
 }
+.rounded-lg {
+    border-radius: 0.5rem;
+}
 .rounded {
     border-radius: 0.25rem;
+}
+.rounded-l-md {
+    border-top-left-radius: 0.375rem;
+    border-bottom-left-radius: 0.375rem;
+}
+.rounded-r-md {
+    border-top-right-radius: 0.375rem;
+    border-bottom-right-radius: 0.375rem;
 }
 .rounded-t-lg {
     border-top-left-radius: 0.5rem;
@@ -1059,11 +1058,17 @@ h6 {
 .border-2 {
     border-width: 2px;
 }
-.border-t-2 {
-    border-top-width: 2px;
-}
 .border-t {
     border-top-width: 1px;
+}
+.border-r {
+    border-right-width: 1px;
+}
+.border-b {
+    border-bottom-width: 1px;
+}
+.border-t-2 {
+    border-top-width: 2px;
 }
 .border-b-2 {
     border-bottom-width: 2px;
@@ -1077,10 +1082,6 @@ h6 {
 .border-gray-200 {
     --tw-border-opacity: 1;
     border-color: rgba(229, 231, 235, var(--tw-border-opacity));
-}
-.border-gray-800 {
-    --tw-border-opacity: 1;
-    border-color: rgba(31, 41, 55, var(--tw-border-opacity));
 }
 .border-gray-100 {
     --tw-border-opacity: 1;
@@ -1097,9 +1098,17 @@ h6 {
     --tw-border-opacity: 1;
     border-color: rgba(55, 65, 81, var(--tw-border-opacity));
 }
-.bg-gray-800 {
+.bg-purple-600 {
     --tw-bg-opacity: 1;
-    background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+    background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
+}
+.bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-green-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
 }
 .bg-gray-100 {
     --tw-bg-opacity: 1;
@@ -1108,10 +1117,6 @@ h6 {
 .bg-gray-200 {
     --tw-bg-opacity: 1;
     background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
-}
-.bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 .bg-gray-50 {
     --tw-bg-opacity: 1;
@@ -1124,6 +1129,10 @@ h6 {
 .bg-blue-100 {
     --tw-bg-opacity: 1;
     background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
+}
+.bg-gray-800 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 .bg-indigo-500 {
     --tw-bg-opacity: 1;
@@ -1200,6 +1209,9 @@ h6 {
 .pb-5 {
     padding-bottom: 1.25rem;
 }
+.pt-2 {
+    padding-top: 0.5rem;
+}
 .pt-10 {
     padding-top: 2.5rem;
 }
@@ -1260,14 +1272,6 @@ h6 {
     font-size: 1rem;
     line-height: 1.5rem;
 }
-.text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-}
-.text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-}
 .text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1275,6 +1279,10 @@ h6 {
 .text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+}
+.text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
 }
 .text-3xl {
     font-size: 1.875rem;
@@ -1287,11 +1295,11 @@ h6 {
 .font-bold {
     font-weight: 700;
 }
-.font-semibold {
-    font-weight: 600;
-}
 .font-medium {
     font-weight: 500;
+}
+.font-semibold {
+    font-weight: 600;
 }
 .font-extrabold {
     font-weight: 800;
@@ -1933,10 +1941,6 @@ body.hidden-scroll {
     --tw-bg-opacity: 1;
     background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
-.hover\:bg-gray-900:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
 .hover\:bg-indigo-700:hover {
     --tw-bg-opacity: 1;
     background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
@@ -1952,6 +1956,10 @@ body.hidden-scroll {
 .hover\:bg-yellow-600:hover {
     --tw-bg-opacity: 1;
     background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
+}
+.hover\:text-gray-600:hover {
+    --tw-text-opacity: 1;
+    color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
 .hover\:text-white:hover {
     --tw-text-opacity: 1;
