shedule card font size adjusted

--- a/docs/gallery/gallery-sync.css
+++ b/docs/gallery/gallery-sync.css
@@ -766,14 +766,14 @@ h6 {
 .mt-12 {
     margin-top: 3rem;
 }
-.mt-3 {
-    margin-top: 0.75rem;
-}
 .mt-1 {
     margin-top: 0.25rem;
 }
 .-ml-4 {
     margin-left: -1rem;
+}
+.mt-3 {
+    margin-top: 0.75rem;
 }
 .ml-4 {
     margin-left: 1rem;
@@ -808,11 +808,11 @@ h6 {
 .h-6 {
     height: 1.5rem;
 }
-.h-8 {
-    height: 2rem;
-}
 .h-4 {
     height: 1rem;
+}
+.h-8 {
+    height: 2rem;
 }
 .h-5 {
     height: 1.25rem;
@@ -832,11 +832,11 @@ h6 {
 .w-6 {
     width: 1.5rem;
 }
-.w-8 {
-    width: 2rem;
-}
 .w-4 {
     width: 1rem;
+}
+.w-8 {
+    width: 2rem;
 }
 .w-max {
     width: max-content;
@@ -846,9 +846,6 @@ h6 {
 }
 .w-48 {
     width: 12rem;
-}
-.min-w-0 {
-    min-width: 0px;
 }
 .max-w-6xl {
     max-width: 72rem;
@@ -891,6 +888,10 @@ h6 {
     --tw-translate-y: -50%;
     transform: var(--tw-transform);
 }
+.-rotate-90 {
+    --tw-rotate: -90deg;
+    transform: var(--tw-transform);
+}
 .rotate-45 {
     --tw-rotate: 45deg;
     transform: var(--tw-transform);
@@ -900,9 +901,6 @@ h6 {
 }
 .cursor-pointer {
     cursor: pointer;
-}
-.appearance-none {
-    appearance: none;
 }
 .auto-cols-max {
     grid-auto-columns: max-content;
@@ -1127,10 +1125,6 @@ h6 {
 .bg-gray-800 {
     --tw-bg-opacity: 1;
     background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
-}
-.bg-indigo-500 {
-    --tw-bg-opacity: 1;
-    background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
 }
 .bg-gray-400 {
     --tw-bg-opacity: 1;
@@ -1363,10 +1357,6 @@ h6 {
 }
 .no-underline {
     text-decoration: none;
-}
-.placeholder-gray-500::placeholder {
-    --tw-placeholder-opacity: 1;
-    color: rgba(107, 114, 128, var(--tw-placeholder-opacity));
 }
 .shadow {
     --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
@@ -1935,10 +1925,6 @@ body.hidden-scroll {
     --tw-bg-opacity: 1;
     background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
 }
-.hover\:bg-indigo-600:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
-}
 .hover\:bg-gray-100:hover {
     --tw-bg-opacity: 1;
     background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
@@ -1982,14 +1968,6 @@ body.hidden-scroll {
     --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.focus\:border-white:focus {
-    --tw-border-opacity: 1;
-    border-color: rgba(255, 255, 255, var(--tw-border-opacity));
-}
-.focus\:placeholder-gray-400:focus::placeholder {
-    --tw-placeholder-opacity: 1;
-    color: rgba(156, 163, 175, var(--tw-placeholder-opacity));
-}
 .focus\:outline-none:focus {
     outline: 2px solid transparent;
     outline-offset: 2px;
@@ -2002,23 +1980,12 @@ body.hidden-scroll {
 .focus\:ring-inset:focus {
     --tw-ring-inset: inset;
 }
-.focus\:ring-white:focus {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgba(255, 255, 255, var(--tw-ring-opacity));
-}
-.focus\:ring-indigo-500:focus {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgba(99, 102, 241, var(--tw-ring-opacity));
-}
 .focus\:ring-blue-500:focus {
     --tw-ring-opacity: 1;
     --tw-ring-color: rgba(59, 130, 246, var(--tw-ring-opacity));
 }
 .focus\:ring-offset-2:focus {
     --tw-ring-offset-width: 2px;
-}
-.focus\:ring-offset-gray-800:focus {
-    --tw-ring-offset-color: #1f2937;
 }
 .group:hover .group-hover\:text-gray-500 {
     --tw-text-opacity: 1;
@@ -2028,21 +1995,6 @@ body.hidden-scroll {
     .sm\:-mx-6 {
         margin-left: -1.5rem;
         margin-right: -1.5rem;
-    }
-    .sm\:mt-0 {
-        margin-top: 0px;
-    }
-    .sm\:ml-3 {
-        margin-left: 0.75rem;
-    }
-    .sm\:flex {
-        display: flex;
-    }
-    .sm\:max-w-md {
-        max-width: 28rem;
-    }
-    .sm\:flex-shrink-0 {
-        flex-shrink: 0;
     }
     .sm\:p-10 {
         padding: 2.5rem;
@@ -2179,9 +2131,6 @@ body.hidden-scroll {
     .md\:justify-between {
         justify-content: space-between;
     }
-    .md\:gap-8 {
-        gap: 2rem;
-    }
     .md\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
         --tw-space-x-reverse: 0;
         margin-right: calc(2.5rem * var(--tw-space-x-reverse));
@@ -2225,6 +2174,10 @@ body.hidden-scroll {
     .md\:text-3xl {
         font-size: 1.875rem;
         line-height: 2.25rem;
+    }
+    .md\:text-lg {
+        font-size: 1.125rem;
+        line-height: 1.75rem;
     }
     .md\:text-2xl {
         font-size: 1.5rem;
