refund policy added

--- a/pages/_includes/_page_footer.njk
+++ b/pages/_includes/_page_footer.njk
@@ -10,20 +10,20 @@
                     <ul role="list" class="mt-4 space-y-4">
                         <li>
                             <a href="/" class="text-base text-gray-300 hover:text-white">
-                                    Home
-                                </a>
+                                Home
+                            </a>
                         </li>
 
                         <li>
-                            <a href="/about" class="text-base text-gray-300 hover:text-white">
-                                    About
-                                </a>
+                            <a href="/about.html" class="text-base text-gray-300 hover:text-white">
+                                About
+                            </a>
                         </li>
 
                         <li>
-                            <a href="/shchedule" class="text-base text-gray-300 hover:text-white">
-                                    Schedule
-                                </a>
+                            <a href="/gallery.html" class="text-base text-gray-300 hover:text-white">
+                                Gallery
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -33,19 +33,15 @@
                         </h3>
                     <ul role="list" class="mt-4 space-y-4">
                         <li>
-                            <a href="/contact" class="text-base text-gray-300 hover:text-white">
-                                    Contact
-                                </a>
+                            <a href="/contact.html" class="text-base text-gray-300 hover:text-white">
+                                Contact
+                            </a>
                         </li>
+                        
                         <li>
-                            <a href="/services" class="text-base text-gray-300 hover:text-white">
-                                    Services
-                                </a>
-                        </li>
-                        <li>
-                            <a href="/refund-policy" class="text-base text-gray-300 hover:text-white">
-                                    Refund Policy
-                                </a>
+                            <a href="/refund-policy.html" class="text-base text-gray-300 hover:text-white">
+                                Refund Policy
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -76,7 +72,7 @@
                         <p class="mt-4 text-base text-gray-300">
                             Dhaka Office:
                         </p>
-                       
+
                         <p class="mt-1 text-base text-gray-300 py-2">
                             <a href="tel:+8801779181872" class="transition duration-500 ease-in-out px-2 py-1 text-base text-white no-underline flex items-center">
                                 <img src="images/phone.svg" height="16" width="16" class="w-4 h-4"> &nbsp; 01779-181872
@@ -95,7 +91,7 @@
                             d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
                             clip-rule="evenodd"/>
                     </svg>
-                </a>                
+                </a>
             </div>
             <p class="mt-8 text-base text-gray-400 md:mt-0 md:order-1">
                 &copy; 2021 Farhan Tourism, Inc. All rights reserved.
