--- a/docs/contact/contact-sync.css
+++ b/docs/contact/contact-sync.css
@@ -763,6 +763,12 @@ h6 {
 .mt-10 {
     margin-top: 2.5rem;
 }
+.ml-8 {
+    margin-left: 2rem;
+}
+.mr-4 {
+    margin-right: 1rem;
+}
 .mt-12 {
     margin-top: 3rem;
 }
@@ -901,6 +907,9 @@ h6 {
 }
 .cursor-pointer {
     cursor: pointer;
+}
+.list-decimal {
+    list-style-type: decimal;
 }
 .auto-cols-max {
     grid-auto-columns: max-content;
@@ -1226,14 +1235,14 @@ h6 {
 .pb-2 {
     padding-bottom: 0.5rem;
 }
+.pb-4 {
+    padding-bottom: 1rem;
+}
 .pt-8 {
     padding-top: 2rem;
 }
 .pt-6 {
     padding-top: 1.5rem;
-}
-.pb-4 {
-    padding-bottom: 1rem;
 }
 .pt-1 {
     padding-top: 0.25rem;
