--- a/pages/_includes/_page_footer.njk
+++ b/pages/_includes/_page_footer.njk
@@ -61,10 +61,10 @@
                         </p>
                         <p class="mt-1 text-base text-gray-300 py-2">
                             <a href="tel:+8801826191509" class="transition duration-500 ease-in-out px-2 py-1 text-base text-white no-underline flex items-center">
-                                <img src="images/phone.svg" height="16" width="16" class="w-4 h-4"> &nbsp; 01826-191509
+                                <img src="images/phone.svg" alt="phone icon" height="16" width="16" class="w-4 h-4"> &nbsp; 01826-191509
                             </a>
                             <a href="tel:+8801818774311" class="transition duration-500 ease-in-out px-2 py-1 text-base text-white no-underline flex items-center">
-                                <img src="images/phone.svg" height="16" width="16" class="w-4 h-4"> &nbsp; 01818-774311
+                                <img src="images/phone.svg" alt="phone icon" height="16" width="16" class="w-4 h-4"> &nbsp; 01818-774311
                             </a>
                         </p>
                     </div>
@@ -75,7 +75,7 @@
 
                         <p class="mt-1 text-base text-gray-300 py-2">
                             <a href="tel:+8801779181872" class="transition duration-500 ease-in-out px-2 py-1 text-base text-white no-underline flex items-center">
-                                <img src="images/phone.svg" height="16" width="16" class="w-4 h-4"> &nbsp; 01779-181872
+                                <img src="images/phone.svg" alt="phone icon" height="16" width="16" class="w-4 h-4"> &nbsp; 01779-181872
                             </a>
                         </p>
                     </div>
@@ -84,7 +84,7 @@
         </div>
         <div class="mt-8 border-t border-gray-700 pt-8 md:flex md:items-center md:justify-between">
             <div class="flex space-x-6 md:order-2">
-                <a href="https://www.facebook.com/Bay-Cruise-103232501157259" class="text-gray-400 hover:text-gray-300" target="_blank">
+                <a href="https://www.facebook.com/Bay-Cruise-103232501157259" rel="noopener" class="text-gray-400 hover:text-gray-300" target="_blank">
                     <span class="sr-only">Facebook</span>
                     <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path fill-rule="evenodd"
