--- a/docs/refund-policy/refund-policy-sync.css
+++ b/docs/refund-policy/refund-policy-sync.css
@@ -1115,9 +1115,9 @@ h6 {
     --tw-bg-opacity: 1;
     background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
-.bg-green-500 {
+.bg-green-800 {
     --tw-bg-opacity: 1;
-    background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+    background-color: rgba(6, 95, 70, var(--tw-bg-opacity));
 }
 .bg-gray-200 {
     --tw-bg-opacity: 1;
@@ -1134,6 +1134,10 @@ h6 {
 .bg-blue-100 {
     --tw-bg-opacity: 1;
     background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
+}
+.bg-green-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
 }
 .bg-gray-800 {
     --tw-bg-opacity: 1;
