--- a/pages/_includes/components/media-carousel.njk
+++ b/pages/_includes/components/media-carousel.njk
@@ -6,12 +6,12 @@
             {% if splitNav %}
                 <nav class="absolute inset-y-1/2 w-full flex flex-row justify-between items-center z-20 m-auto h-8 md:h-12">
                     <div class="carousel-button-prev h-8 md:h-12 w-8 md:w-12 bg-gray-400 bg-opacity-60 shadow-md flex justify-center items-center">
-                        <button class="inline-block w-4 h-4 transform rotate-45 justify-self-end border-b-2 border-l-2 border-ams-gold focus:outline-none -indent-xl overflow-hidden">
+                        <button aria-label="Left Arrow" class="inline-block w-4 h-4 transform rotate-45 justify-self-end border-b-2 border-l-2 border-ams-gold focus:outline-none -indent-xl overflow-hidden">
                             
                         </button>
                     </div>
                     <div class="carousel-button-next h-8 md:h-12 w-8 md:w-12 bg-gray-400 bg-opacity-60 shadow-md flex justify-center items-center">
-                        <button class="inline-block w-4 h-4 transform rotate-45 justify-self-start border-t-2 border-r-2 border-ams-gold focus:outline-none -indent-xl overflow-hidden">
+                        <button aria-label="Right Arrow" class="inline-block w-4 h-4 transform rotate-45 justify-self-start border-t-2 border-r-2 border-ams-gold focus:outline-none -indent-xl overflow-hidden">
                             
                         </button>
                     </div>
