--- a/pages/contact/contact.njk
+++ b/pages/contact/contact.njk
@@ -23,7 +23,7 @@ nickname: "Contact"
                     <p class="text-base">{{loc.copy | safe}}</p>
                     {% for ph in loc.phone%}
                         <a href="tel:+88{{ph}}" class="transition duration-500 ease-in-out px-2 py-1 text-base no-underline flex items-center">
-                            <img src="images/phone_dark.svg" height="16" width="16" class="w-4 h-4"> &nbsp; {{ph}}
+                            <img src="images/phone_dark.svg" alt="phone icon" height="16" width="16" class="w-4 h-4"> &nbsp; {{ph}}
                         </a>
                     {% endfor %}
                 </div>
