--- a/pages/_layouts/base.njk
+++ b/pages/_layouts/base.njk
@@ -88,6 +88,11 @@ meta_description: Some description here
   <meta property="og:image:height" content="300" />
   <meta property="fb:app_id" content="329606335394853" />
   <!-- facebook and other social sites -->
+
+  <!-- Start SEO -->
+  <meta name="msvalidate.01" content="D489814215ACC482EAA2027BEAEB54C6" />
+  <!-- End SEO -->
+
 </head>
 
 <body class="preload page-{{pagename}}">
