--- a/pages/index/index.njk
+++ b/pages/index/index.njk
@@ -72,7 +72,7 @@ nickname: "You Thing"
 
     <div class="mt-6 pb-10 md:mt-10 md:pb-20">
         <div class="relative z-0">
-            <div class="absolute inset-0 h-5/6 bg-gray-200 md:h-2/3"></div>
+            {# <div class="absolute inset-0 h-5/6 bg-gray-200 md:h-2/3"></div> #}
             <div class="max-w-6xl mx-auto px-4 sm:px-6 md:px-8">
                 <div class="relative md:grid md:grid-cols-7">
                     <div class="mx-auto max-w-md md:mx-0 md:max-w-none md:col-start-1 md:col-end-3 md:row-start-2 md:row-end-3">
