--- a/pages/_layouts/base.njk
+++ b/pages/_layouts/base.njk
@@ -1,7 +1,6 @@
 ---
 pagename: base
 meta_title: Skipper
-meta_description: Some description here
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -23,7 +22,7 @@ meta_description: Some description here
     <meta charset="utf-8" />
     <meta name="keywords"
     content="Bay Cruise, Baycuise, Bay-Cruise, Ship, জাহাজ, travel, tours, Ship ticketing, bdcruise, cruise ship, luxury cruise ship, luxury cruise ship in bd, Cruise ship - Ship class, bay one cruise, bay cruise ship, bay one cruise ship, teknaf to saint martin, Cox's Bazar" />
-    <meta name="description" content="Teknaf To Saint Martin Island Cruise Tour" />
+    <meta name="description" content="Teknaf To Saint Martin Island Cruise Tour, Bay Cruise" />
     <meta name="theme-color" content="#1b2445" />
 
     {% if meta_description %}
