--- a/pages/index/index.njk
+++ b/pages/index/index.njk
@@ -16,8 +16,8 @@ nickname: "You Thing"
     </article>
     <article class="absolute top-2/4 ty-50 left-0 right-0 w-full max-w-5xl mx-auto z-10">
         <div class="max-w-sm md:float-right text-left text-white px-4 md:px-0">
-            <div class="font-fair grid text-xl md:text-6xl font-bold tracking-wider mb-2 md:mb-5">
-                <small class="text-sm md:text-3xl text-contrast font-poppins">Introducing</small> Bay Cruise</div>
+            <h1 class="font-fair grid text-xl md:text-6xl font-bold tracking-wider mb-2 md:mb-5">
+                <small class="text-sm md:text-3xl text-contrast font-poppins">Introducing</small> Bay Cruise</h1>
             <div class="mb-2 md:mb-8">The first catamaran service between Teknaf and St Martins Island in less than 02 hours.</div>
             {{component('buttons/link_button', slide_link)}}
         </div>
@@ -43,7 +43,9 @@ nickname: "You Thing"
         </div>
     </div>
 {% endmacro %}
-
+<h1 class="hidden">Bay Cruise</h1>
+<h1 class="hidden">MV Bay Cruise</h1>
+<h1 class="hidden">bdcruise</h1>
 {# Schedule #}
 <section class="max-w-4xl mx-auto py-10">
     {{component('headings/section', schedule)}}
